Fix alignment of upgrades.

--- a/src/stories/cards/UpgradeCard.scss
+++ b/src/stories/cards/UpgradeCard.scss
@@ -50,6 +50,7 @@
     > .details {
       display: flex;
       margin: 2px;
+      justify-content: flex-end;
 
       > .weapon {
         background: #01361b;
